# AIEngineering_JavaPython

./: .gitignore  CourseContents.txt  OrderToRevise.txt
AI-Banking-Logs-RCA-Agent/: .gitignore  AI-Banking-Logs-RCA-Agent_Project_Summary.md  BankingMicroservicesRCA.docx
AIAgents_JupyterNB/: 4_SummaryChatbot_withReviewer.ipynb  BasicReActAgent_LangGraph.ipynb
AgentEngg/: Setup.docx
AgentEngg/3_CrewAI_Multi_Currency_Wallet/: EnggTeam_MultiCurrencyWallet.docx  README.md  pyproject.toml
AgentEngg/3_CrewAI_Multi_Currency_Wallet/output/: accounts.py  accounts.py_design.md  app.py
AgentEngg/3_CrewAI_Multi_Currency_Wallet/src/multi_currency_wallet/: crew.py  main.py
AgentEngg/3_CrewAI_Multi_Currency_Wallet/src/multi_currency_wallet/config/: agents.yaml  tasks.yaml
AgentEngg/3_CrewAI_Multi_Currency_Wallet/src/multi_currency_wallet/tools/: ExchangeRateTool.py
AgenticDesignPatterns_JupyterNB/: 2_Product_Q&A_Chatbot.ipynb  3_OrdersChatbot_with_CustomAgent.ipynb  5_Multi-agent-chatbotsWithRouting.ipynb
CoreConceptsofAI_LLMS/: AIBasics.txt  Demo.java  EmbeddingAndVector.txt  Java_Setup_notes.txt  LangchainIntro.txt  SpringAI_Abstraction.txt  Transformers_part2.txt
Langchain/: LC_ContChat.py  LangchainDemo.py  LangchainIntroNotes.txt  pyproject.toml
Langchain/LangchainChatMemory/: .env  LC_MemChat.py  pyproject.toml
Langchain/RAG_LC/: .env  RAG_LC.docx  main.py  pyproject.toml  rag_example.py
Langchain/RAG_LC/chroma_db/: chroma.sqlite3
Langchain/ToolCalling/: .env  Multi-toolcalling_flow.docx  lc_tool_demo.py  lc_tool_demo_v1.py
MCP/: MCP_intro.docx
(+325 files in other folders)
