[project]
name = "multi_currency_wallet"
version = "0.1.0"
description = "Multi_Currency_Wallet using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
multi_currency_wallet = "multi_currency_wallet.main:run"
run_crew = "multi_currency_wallet.main:run"
train = "multi_currency_wallet.main:train"
replay = "multi_currency_wallet.main:replay"
test = "multi_currency_wallet.main:test"
run_with_trigger = "multi_currency_wallet.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
